# funlab-flaskr

./: .gitignore  LICENSE  README.md  pyproject.toml  test.db
docs/: DARK_LIGHT_MENU_FIX_SUMMARY.md  DARK_LIGHT_MODE_FIX.md  DEMO_ASSETS_DECISION.md  EXECUTION_COMPLETE_SUMMARY.md  MENU_DIAGNOSTIC_TOOL.md  MERGE_READINESS_CHECKLIST.md  THEME_TOGGLE_OPTIMIZATION.md  UI_ARCHITECTURE_GUIDE.md  UI_REFACTOR_AND_UPGRADE_PLAN.md  UPGRADE_COMPLETION_REPORT.md  UPGRADE_CONTINUATION_PLAN.md  UPGRADE_EXECUTION_LOG.md  UPGRADE_FINAL_SUMMARY.md  menu-diagnostic.js  plugin_analysis_prompt.md  ui_refactor_and_upgrade_prompt.md
docs/plugin_refactore/: hook_refactor_plan.md  hook_usage_examples.md
funlab/flaskr/: __init__.py  app.py  app_bak.py  app_old.py  app_sse.py  hook_test_plugin.py  plugin_mgmt_view.py
funlab/flaskr/_users/minghui/: capital_918M0016081.pfx
funlab/flaskr/_users/moonmoth/: capital_918M0247863.pfx
funlab/flaskr/_users/sunnylin/: Sino_9A9X-0422748.pfx  Yuanta_S98590071757.pfx  fubon_9647-0866006.p12  fubon_9647-0866006.pfx
funlab/flaskr/conf/: config.toml  gunicorn_conf.py  waitress_conf.py
funlab/flaskr/sse/: architecture.md  event_seqence_diagram.md  manager.py  models.py  utils.py  workflow.md
funlab/flaskr/static/js/: notifications.js  polling_notifications.js
funlab/flaskr/templates/: about.html  blank.html  bye-bye.html  conf-data.html  error-403.html  error-404.html  error-500.html  error-maintenance.html  index.html  plugin_management.html  ssetest.html  tabler_index_demo.html
tests/funlab/: test_menu.py
(+14 files in other folders)
